2006-07-12  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - another large rowspan test case

        * fast/table/large-rowspan-crash-expected.txt: Added.
        * fast/table/large-rowspan-crash.html: Added.

2006-07-12  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Maciej.

        <rdar://problem/4586665> REGRESSION: autorestore.apple.com: Crashes Safari in WebCore::Widget::client() const

        * fast/forms/input-type-change-in-onfocus-keyboard-expected.txt: Added.
        * fast/forms/input-type-change-in-onfocus-keyboard.html: Added.
        * fast/forms/input-type-change-in-onfocus-mouse-expected.txt: Added.
        * fast/forms/input-type-change-in-onfocus-mouse.html: Added.

2006-07-12  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        Test for: http://bugzilla.opendarwin.org/show_bug.cgi?id=9813
        OPTION text can paint over select element's scrollbar

        * fast/forms/option-text-clip-expected.checksum: Added.
        * fast/forms/option-text-clip-expected.png: Added.
        * fast/forms/option-text-clip-expected.txt: Added.
        * fast/forms/option-text-clip.html: Added.

2006-07-11  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by levi
        
        <rdar://problem/4620686>
        REGRESSION: Mispelling markers are still displayed when using the delete key to place caret into a misspelled word

        * editing/deleting/delete-after-span-ws-001-expected.checksum:
        * editing/deleting/delete-after-span-ws-001-expected.png:
        * editing/deleting/delete-after-span-ws-002-expected.checksum:
        * editing/deleting/delete-after-span-ws-002-expected.png:
        * editing/deleting/delete-after-span-ws-003-expected.checksum:
        * editing/deleting/delete-after-span-ws-003-expected.png:
        * editing/deleting/delete-block-merge-contents-010-expected.checksum:
        * editing/deleting/delete-block-merge-contents-010-expected.png: