@@ -4,11 +4,3 @@ if (window.layoutTestController)
 </script>
 <table><td rowspan=674227123></td></table>
 <p>If the browser didn't crash, the test passed.</p>
-
-Property changes on: LayoutTests/fast/table/large-rowspan-crash.html
-___________________________________________________________________
-Name: svn:mime-type
-   + text/html
-Name: svn:eol-style
-   + native
-
